edit to the skill

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<head>
+  <title><%= title %></title>
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.classless.min.css" />
+</head>
+<body>
+  <main>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <ul>
+      <li><a href="/skills">Where can I get lunch around here?</a></li>
+      <li>Where can I get stationery?</li>
+      <li>How do I get expenses reimbursed?</li>
+      <li>How do I open an IT ticket?</li>
+      <li>How do I reserve a conference room?</li>
+    </ul>
+  </main>
+</body>
 </html>
